--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <base href="https://isukhii.github.io/primenumbers/">    
     <title>
         Check if a number from array is prime or not
     </title>
@@ -39,6 +40,7 @@
             <p id="list"></p>
         </form>
     </center>
+    <script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.55d25c326339e0195125.js"></script></body>
 </body>
 
 </html>
